basemap gallery added success

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
           <div class="header">
             <h3><button class="closeRightPanel"><i class="fas fa-times"></i></button>Base Map Gallery</h3>
           </div>
-          <div class="innerTab">
-            xadx
+          <div id="Widget_BasemapGallery">
+            
           </div>
         </div>
         <div class="tab-pane fade" id="v-pills-three" role="tabpanel" aria-labelledby="v-pills-three-tab">
@@ -252,7 +252,7 @@
             aria-controls="v-pills-four" aria-selected="false"><img src="images/qn-icon.png"></a>
         </div>
       </div>
-      <div class="baseMapToggle"><img id="SwitchView" src="images/focus-icon.png"></div>
+      <div class="baseMapToggle"><img src="images/focus-icon.png"></div>
     </div>
 
   </section>
