--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://js.arcgis.com/4.17/esri/themes/light/main.css" />
   <link rel="stylesheet" href="https://js.arcgis.com/4.17/dijit/themes/claro/claro.css">
 
-  <link rel="stylesheet" href="css/jquery-ui.css">
+  <!-- <link rel="stylesheet" href="css/jquery-ui.css"> -->
   <link rel="stylesheet" type="text/css" href="./slick/slick.css">
   <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css">
   <link href="style.css" rel="stylesheet">
@@ -445,7 +445,7 @@
           <!--  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button> -->
-          <div class="discLogo"><img src="images/logo.svg"></div>
+          <div class="discLogo"><img src="images/logo.png"></div>
         </div>
         <div class="modal-body">
           <p>
