--- a/index.html
+++ b/index.html
@@ -533,13 +533,13 @@
 
 
         //Search Result grid
-        $(".searchBox .searchBtn").click(function () {
-            $(".searchResults").addClass("active");
-        });
-        $(".searchResults  h3 .closeSearch").click(function () {
-            $(".searchResults").removeClass("active");
+        //$(".searchBox .searchBtn").click(function () {
+        //    $(".searchResults").addClass("active");
+        //});
+        //$(".searchResults  h3 .closeSearch").click(function () {
+        //    $(".searchResults").removeClass("active");
 
-        });
+        //});
 
     // $(function () {
     //   $('.footerGrid').resizable({
