preparint share widget updates done.

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="header">
                         <h3><button class="closeRightPanel"><i class="fas fa-times"></i></button>Share </h3>
                     </div>
-                    <div class="innerTab">
+                    <div  id="Widget_Share" >
                         a
                     </div>
                 </div>
